--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <%# if user is signed in show %>
     <%# sign out button with turbo delete method %>
     <% if signed_in? %>
-      <%= link_to "Sign out", destroy_user_session_path, data: { turbo: true, turbo_method: "delete" } %>
+      <%= link_to "Sign out", destroy_user_session_path, data: { turbo: true, turbo_method: "delete" }, class: "btn btn-danger" %>
     <% end %>
     <%= yield %>
   </body>
