--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,3 +1,39 @@
-<h1>
-	Foods
-</h1>
+<div class="container">
+<div class="d-flex justify-content-between">
+  <div>
+    <h1>Foods</h1>
+
+  </div>
+  <div>
+    <%= link_to "Add", new_food_path, class: "btn btn-primary" %>
+
+  </div>
+</div>
+
+<div class="table-responsive">
+  <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Food</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Measurement Unit</th>
+      <th scope="col">Unit Price</th>
+      <th scope="col">Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @foods.each do |food| %>
+    <tr>
+      <td><%= food.name %></td>
+      <td><%= food.quantity %></td>
+      <td><%= food.units %></td>
+      <td>$<%= food.price %></td>
+      <td>
+        <%= button_to "Delete", food_path(food.id), method: :delete, class: "btn btn-danger btn-sm" %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+  </table>
+</div>
+</div>
