--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,9 +6,10 @@
     <div class="collapse navbar-collapse justify-content-between pr-4 pl-4" id="navbarTogglerDemo01">
       <a class="navbar-brand" href="#">Recipe App</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Foods</a>
-        </li>
+        <li class='nav-item active'>
+         <%= link_to 'Foods', foods_path, class: 'nav-link' %>
+        </li>  
+
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Recipes</a>
         </li>
