--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -7,7 +7,7 @@
 		</div>
 		<div class="field">
 		  <%= form.label :units, class:"form-label mt-3 w-100" %>
-		  <%= form.select :units, [["grams"], ["kilos"], ["liters"], ["milliliters"]], {} , {class:"form-control w-100"} %>
+		  <%= form.select :units, [["grams"], ["kilos"], ["liters"], ["milliliters"]], {} , {class:"form-select w-100"} %>
 		</div>
 		<div class="field mt-3">
 		  <%= form.label :price, class:"form-label" %>
