--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,9 +3,9 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-between pr-4 pl-4" id="navbarTogglerDemo01">
+    <div class="collapse navbar-collapse justify-content-between p-2 pr-5 pl-5" id="navbarTogglerDemo01">
       <a class="navbar-brand" href="#">Recipe App</a>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center m-lg-0">
         <li class="nav-item">
           <%= link_to "Foods", foods_path, class: "nav-link active" %>
         </li>
@@ -17,11 +17,11 @@
         </li>
         <% if signed_in? %>
           <li class="nav-item">
-            <%= link_to "Sign out", destroy_user_session_path, data: { turbo: true, turbo_method: "delete" }, class: "btn btn-danger" %>
+            <%= link_to "Sign out", destroy_user_session_path, data: { turbo: true, turbo_method: "delete" }, class: "btn btn-danger m-1" %>
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Sign in", new_user_session_path, class:"btn btn-outline-light" %>
+            <%= link_to "Sign in", new_user_session_path, class:"btn btn-outline-light m-1" %>
           </li>
           <li class="nav-item">
             <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-primary m-1" %>
