--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -27,22 +27,40 @@
               <% end %>
             </div>
           </div>
-          <%
-=begin %>
           <%if @recipe.user_id == current_user.id %>
             <div class="d-flex justify-content-between">
-              <button type="button" class="btn btn-primary">
-                <%= link_to 'Generate Shopping List', new_shopping_list_path(recipe: @recipe.id),  {remote: true, 'data-bs-toggle' =>  "modal", 'data-bs-target' => '#modal-window'}  %>
-              </button>
-              <button type="button" class="btn btn-primary">
-                <%= link_to 'Add ingredient', new_recipe_recipe_food_path(@recipe) %>
-              </button>
+              <%= link_to 'Add ingredient', new_recipe_recipe_food_path(@recipe), class: "btn text-light btn-primary" %>
+              <%= link_to 'Add ingredient', new_recipe_recipe_food_path(@recipe), class: "btn text-light btn-primary" %>
             </div>
           <% end %>
-          <%
-=end %>
         </div>
       </div>
     </div>
+    <table class="table table-striped">
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">Food</th>
+          <th scope="col">Quantity</th>
+          <th scope="col">Units</th>
+          <th scope="col">Unit Price</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @recipe_foods.each do |rfood| %>
+          <tr>
+            <td><%= rfood.food.name %></td>
+            <td><%= rfood.quantity %></td>
+            <td><%= rfood.food.units %></td>
+            <td>$<%= rfood.food.price %></td>
+            <% if can? :manage, rfood %>
+              <td>
+                <%= link_to 'Destroy', "/recipes/#{@recipe.id}/recipe_foods/#{rfood.id}", data: { confirm: 'Are you sure?', turbo_method: :delete }, class: 'btn btn-danger' %>
+              </td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </main>
