--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -1,5 +1,6 @@
-<div class= "container d-flex flex-column">
-<h1>Public Recipes</h1>
+<main class="w-100 d-flex flex-column  justify-content-center align-items-center align-items-center">
+	<h2>Public Recipes</h2>
+<div class="d-flex flex-column w-50">
   <% @recipes.each do |recipe| %>
       <div class="container d-flex justify-content-between m-4 border">
         <%= link_to recipe.name, recipe_path(recipe.id) %>
@@ -12,4 +13,5 @@
           <% end %>
       </div>
   <% end %>
-</div>
+  </div>
+</main>
