--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -35,7 +35,8 @@
           </div>
         </div>
       </div>
-      <table class="table table-striped">
+    </div>
+      <table class="table table-striped w-75">
         <thead class="table-dark">
           <tr>
             <th scope="col">Food</th>
@@ -63,6 +64,5 @@
           <% end %>
         </tbody>
       </table>
-    </div>
   </div>
 </main>
