--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -13,6 +13,10 @@
 		  <%= form.label :price, class:"form-label" %>
 		  <%= form.number_field :price, step: :any, class:"form-control" %>
 		</div>
+		<div class="field mt-3">
+		  <%= form.label :quantity, class:"form-label" %>
+		  <%= form.number_field :quantity, step: :any, class:"form-control" %>
+		</div>
 		<%= form.submit class: "btn btn-primary mt-3" %>
 	<% end %>
 </div>
