--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,7 +1,7 @@
-<main class="w-100 d-flex flex-column  justify-content-center align-items-center align-items-center">
-  <div class="d-flex flex-column w-75">
+<main class="w-100 d-flex flex-column  justify-content-center align-items-center">
+  <div class="d-flex flex-column justify-content-center align-items-center w-75">
     <%= link_to 'Back', public_recipes_path, class: 'btn btn-primary align-self-start' %>
-    <div class="card my-4 w-100 mx-auto bg-dark text-light">
+    <div class="card my-4 w-75 mx-auto bg-dark text-light">
       <div class="card-header text-center">
         <h3> <strong> <%= @recipe.name %> </strong> </h3>
       </div>
