--- a/app/views/shopping_list/index.html.erb
+++ b/app/views/shopping_list/index.html.erb
@@ -3,10 +3,10 @@
   <div class="d-flex flex-column w-50">
     <div class="d-flex justify-content-between">
       <h3>Total items:
-        <%= @totalItems %>
+        <%= @total_items %>
       </h3>
       <h3>Total Price:
-        <%= @totalPrice %>
+        <%= @total_price %>
       </h3>
     </div>
     <%# if shopping list is not empty %>
