--- a/app/views/recipes/public.html.erb
+++ b/app/views/recipes/public.html.erb
@@ -12,7 +12,7 @@
             <div class="row">
               <div class="col-md-4 d-flex flex-column align-items-center justify-content-between">
                 <h3><%= link_to recipe.name, recipe_path(recipe), class: "text-decoration-none text-primary" %></h3>
-                <%= link_to 'Remove', recipe_path(recipe), data: { turbo_method: :delete }, class: 'btn btn-danger mt-2', style: 'height: fit-content;' %>
+                <p class="fw-bold">By <%= recipe.user.name %></p>
               </div>
               <div class="col-md-5">
                 <h5>Total food items: <%= recipe.recipe_foods.length %> </h5>
